[package]
name = "p2"
version = "0.1.0"
authors = ["Helder M. <heldermartins89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.16.0"
strum_macros = "0.16.0"
num-bigint = "0.2"
num-integer = "0.1"
num-traits = "0.2"